--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">姓名</label><span class="label-value">XXX</span></li>
+                        <label class="left-label">姓名</label><span class="label-value">张维浩</span></li>
                     <li>
                         <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li>
-                        <label class="left-label">毕业院校</label><span class="label-value">北京邮电大学</span></li>
+                        <label class="left-label">毕业院校</label><span class="label-value">哈尔滨工业大学</span></li>
                     <li>
                         <label class="left-label">毕业年份</label><span class="label-value">2017</span></li>
                 </ul>
