--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                         <label class="left-label">邮箱</label><span class="label-value">2022112925@stu.hit.edu.cn</span>
                     </li>
                     <li>
-                        <label class="left-label">个人主页</label><span class="label-value">exit-tixe.me</span>
+                        <label class="left-label">个人主页</label><span class="label-value">https://zwh11wzy.github.io/zhangweihao/#</span>
                     </li>
                     <li>
-                        <label class="left-label">Github</label><span class="label-value">github.com/ekCit</span>
+                        <label class="left-label">Github</label><span class="label-value">https://github.com/zwh11wzy</span>
                     </li>
                 </ul>
             </div>
@@ -89,16 +89,16 @@
                 <hr>
                 <ul class="stack-list">
                     <li>
-                        <label class="left-label">前端</label><span class="label-value">jQuery、Angular.js、React.js</span>
+                        <label class="left-label">前端</label><span class="label-value">Vue3、html/css</span>
                     </li>
                     </li>
                     <li>
                         <label class="left-label">后端</label><span
-                            class="label-value">Flask、Django、Twisted、Node.js、MongoDB、MySQL、Redis</span>
+                            class="label-value">Flask、Node.js、MySQL、SpringBoot、fastapi</span>
                     </li>
                     </li>
                     <li>
-                        <label class="left-label">其它</label><span class="label-value">我全都是瞎写的。</span>
+                        <label class="left-label">其它</label><span class="label-value">PaddlePaddle（飞桨）、Git、UNet/VNet 及变种、GAN</span>
                     </li>
                     </li>
                 </ul>
