--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@
 
                 </div>
             </div>
-            <div class="remodal remodal-img" data-remodal-id="weixin-modal">
+            <!-- <div class="remodal remodal-img" data-remodal-id="weixin-modal">
                 <h3>请输入图片URL地址：</h3>
                 <br />
                 <input type="text" id="weixin-url">
                 <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
-            </div>
+            </div> -->
         </div>
         <div class="main">
             <div class="education info-unit right-list">
