--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个人微信</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="static/image/wechat.png" alt="">
+                    <img src="static/image/wechat.png" alt="" style="max-width: 200px; height: auto;">
 
                 </div>
             </div>
