--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             </div>
 
             <div class="code info-unit">
-                <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个微信</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">微信</span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="static/image/wechat.png" alt="" style="max-width: 80px; height: 100px;">
+                    <img src="static/image/wechat.png" alt="" style="max-width: 150px; height: 100px;">
 
                 </div>
             </div>
