--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
 
             <div class="code info-unit">
-                <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">微信</span></h2>
+                <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title">个人微信</span></h2>
                 <hr>
                 <div class="weixin">
                     <img src="static/image/wechat.png" alt="" style="max-width: 150px; height: 200px;">
