--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div> -->
                 <h1 id="username">张维浩</h1>
-                <h4 id="persona-tag">Python / Web / 互联网教育</h4>
+                <h4 id="persona-tag">Python / Web / 大模型</h4>
             </div>
             <div class="profile info-unit">
                 <h2 class="info-header"><i class="iconfont icon-person"></i> <span class="info-title">基本信息</span></h2>
